fix viewport issue on mobile device

--- a/style.css
+++ b/style.css
@@ -215,7 +215,7 @@ body {
 
 @media screen and (max-width:600px){
 	body {
-		height: 100%;
+		min-height: -webkit-fill-available;
 		width: 100%;
 	}
 
